--- a/portfolio_fe/src/index.css
+++ b/portfolio_fe/src/index.css
@@ -15,6 +15,7 @@ body {
   color: #e2e8f0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 /* 애니메이션들 */
